# routing

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STRATEGY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  gitleaks.yml  (+1 more)
ainfera_routing/: __init__.py  decide.py  exploration_thompson.py  explore.py  learning.py  types.py
docs/: exploration-policy-proposal-reasoning-cost-2026-06-09.md  outcome-capture.md  replay-gate-bundle-2026-06-08.json  replay-gate-bundle-2026-06-09-clean.json  replay-gate-query.sql  replay-gate-report-2026-06-08.md  replay-gate-report-2026-06-09-clean.md  replay-gate-result-2026-06-08.json  replay-gate-result-2026-06-09-clean.json
schema/: routing-policy.schema.json
scripts/: ainfera-e2e.md  ainfera-e2e.sh  backlog-verify.sh  counterfactual_dryrun.py  dump_routing_outcomes.sql  export_outcomes.py  github-partner-e2e.sh  promotion_gate.py  publish_policies.sh  refit_policy.py  replay_gate.py  synthetic_coldstart.py  training_cadence.py  training_cadence.sh
templates/: compliance-first.yaml  cost-first.yaml  latency-first.yaml
tests/: __init__.py  test_ain675_expected_cost_ranking.py  test_decide.py  test_exploration_thompson.py  test_explore.py  test_export_outcomes.py  test_latency_slo.py  test_learning.py  test_promotion_gate.py  test_refit_policy.py  test_replay_gate.py  test_smoke.py  test_synthetic_coldstart.py  test_training_cadence.py
